[project]
name = "lmtk"
version = "1.0.0"
description = "Language Models, as God intended."
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[tool.uv]
package = true

# use this to install local dependencies
# [tool.uv.sources]
# package = { path = "<relative path to package>", edit = True }

[dependency-groups]
dev = [
    "pytest-cov",
]  # complexipy, ruff, ty are run via uvx

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmtk"]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"example.py" = ["D"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint]
select = ["D", "E", "F"]
ignore = ["D105", "D107"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
commit_message = "chore: release {version}"
commit_parser = "conventional"
tag_format = "v{version}"
changelog_file = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
